@@ -19,3 +19,4 @@ Changes in version 1.1.x (2021-06-04)
 + name change: testForExperimentCrossCorrelation to testExperimentCrossCorrelation
 + getExperimentCrossCorrelation: Filtering disabled by default, option to suppress warnings
 + bugfix: taxonomyTree gave error when taxa were agglomerated at highest level (taxa name mismatch)
++ bugfix: getExperimentCrossCorrelation's "matrix"" mode works with features named similarly
